SHIT BEST BE WORKING NOW

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>lionsite</title>
-    <link type="text/css" rel="stylesheet" href="/assets/gry.css">
+    <link type="text/css" rel="stylesheet" href="/lionsite/assets/gry.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 
 </head>
